# Api_gateway/pkg/router/gig.go
@@ -9,4 +9,6 @@ import (
 func GigRouters(r fiber.Router, handller *handler.GigHandler) {
 	r.Post("/add",middleware.Auth(Role),handller.CreateGig)
 	r.Get("/user",middleware.Auth(Role),handller.GetGigByUserID)
+	r.Put("/:id",middleware.Auth(Role),handller.UpdaeteGig)
+	r.Delete("/:GigID",middleware.Auth(Role),handller.DeleteGig)
 }
